# MBot3D

./: README.md
src/Navigation_setup/my_navigation/my_robot_navigation/launch/: move_base.launch.xml
src/manual_process/: HOWTO
src/manual_process/src/pcl_tutorial/: CMakeLists.txt  package.xml
src/manual_process/src/pcl_tutorial/src/: create_point_cloud.cpp  create_point_cloud.py  example_point_cloud.cpp  listener.cpp  octomap_subscriber.cpp  octomap_transformer.cpp  octomap_transformer.py  point_cloud_subscriber.cpp  point_cloud_subscriber.py  sensor_msgs_pointCloud2_message.txt  talker.cpp  visualize_merged_octomap.py
src/manual_process/src/pose_sharing/: CMakeLists.txt  package.xml
src/manual_process/src/pose_sharing/src/: odom_subscriber.py
src/map_merge/src/pose_merge/: CMakeLists.txt
src/map_merge/src/pose_merge/src/cpp/: color_merge_test.cpp  multirobot_color_merge.cpp  multirobot_live_color_merge.cpp
src/multi_robot_exploration/launch/: greedy_exploration.launch  map_merge_base_station.launch  my_robot_minimal.launch  namespace_debug.launch  octomap_melodic.launch  qbot0_greedy_exploration.launch  test.launch  test_tf_prefix.launch  tf_pub.launch
src/multimaster_fkie/config_files/: HOWTO.MD  master_config.bash
src/my_robot_config/launch/: my.launch  my_robot_minimal.launch
src/octomap_setup/octomap/lib/: liboctomap.so.1.9.0  liboctomath.so.1.9.0
src/octomap_setup/octomap/lib/cmake/octomap/: octomap-config.cmake  octomap-targets.cmake
src/octomap_setup/octomap_mapping/octomap_server/launch/: octomap_mapping.launch
src/octomap_setup/octomap_mapping/octomap_server/src/: OctomapServer.cpp
src/octomap_setup/octomap_server/include/octomap_server/: OctomapServer.h
src/octomap_setup/octomap_server/launch/: octomap_mapping.launch
src/octomap_setup/octomap_server/src/: OctomapServer.cpp
src/openni_camera/openni_camera/launch/: openni_node.launch
